removed units from breakpoint values

--- a/src/variables/_index.scss
+++ b/src/variables/_index.scss
@@ -1,7 +1,7 @@
 $breakpoints-values: (
-  mobile-s: 320rem,
-  mobile-m: 480px,
-  mobile-l: 640px,
+  mobile-s: 320,
+  mobile-m: 480,
+  mobile-l: 640,
 
   tablet-s: 768,
   tablet-m: 800,
