readme and small fixes

--- a/src/mixins/_breakpoints.scss
+++ b/src/mixins/_breakpoints.scss
@@ -4,7 +4,7 @@
   $max-breakpoint: _breakpoints-values(nth($string, 2));
 
   @if type-of($min-breakpoint) == number and type-of($max-breakpoint == number) and comparable($min-breakpoint, $max-breakpoint) and $min-breakpoint >= $max-breakpoint {
-    @warn 'Minimum breakpoint is bigger than the maximum breakpoint: #{$min-breakpoint} >= #{$max-breakpoint}';
+    @error Minimum breakpoint is bigger than the maximum breakpoint - $min-breakpoint >= $max-breakpoint;
   }
 
   @if ($min-breakpoint == false and $max-breakpoint == false) or ($max-breakpoint == false and $breakpoints-ie8) {
