Change `instalation` to `installation`

--- a/style/style.css
+++ b/style/style.css
@@ -524,7 +524,7 @@ strong {
 .hero__btns > * {
   margin: 0 .5rem; }
 
-.instalation {
+.installation {
   background: #34495e;
   color: #dfe7ee; }
 
