--- a/style/style.css
+++ b/style/style.css
@@ -412,7 +412,8 @@ body {
   box-sizing: border-box; }
 
 a {
-  transition: all 200ms ease; }
+  transition: all 200ms ease;
+  color: #e74c3c; }
 
 strong {
   font-weight: 400; }
@@ -424,14 +425,15 @@ strong {
   text-align: center; }
 
 .u-code {
-  font-family: 'Source Code Pro';
+  font-family: 'Source Code Pro', monospace;
   background: rgba(0, 0, 0, 0.03);
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   font-size: .8rem;
   padding: .5rem 1rem;
   display: inline-block;
-  text-align: left; }
+  text-align: left;
+  max-width: 100%; }
 
 .u-code--dark {
   color: rgba(255, 255, 255, 0.7);
@@ -440,6 +442,10 @@ strong {
 
 .u-code--inline {
   padding: .25rem; }
+
+.u-code pre {
+  margin: 0;
+  font-family: inherit; }
 
 .u-name {
   font-family: 'Montserrat', sans-serif;
@@ -456,6 +462,12 @@ strong {
   font-weight: 400;
   font-size: 1.25rem;
   margin: 0 0 1rem; }
+
+.u-left {
+  text-align: left; }
+
+.u-full-width {
+  width: 100%; }
 
 .btn--regular {
   font-family: 'Lato', sans-serif;
@@ -489,7 +501,7 @@ strong {
   text-align: center;
   width: 100%;
   background: #fafafa url(../images/hero-background.jpg) no-repeat top center;
-  min-height: 300px;
+  min-height: 250px;
   min-height: 95vh;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -498,12 +510,16 @@ strong {
   color: #666666; }
 
 .hero__content {
-  width: 100%; }
+  width: 100%;
+  padding-top: 0;
+  padding-bottom: 0; }
 
 .hero__title {
   margin: 0 auto .5rem;
-  max-width: 80%;
   font-size: 3rem; }
+  @media only screen and (max-width: 479px) {
+    .hero__title {
+      font-size: 2.5rem; } }
 
 .hero__tagline {
   font-size: 1.25rem;
@@ -520,9 +536,17 @@ strong {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center; }
+  @media only screen and (max-width: 767px) {
+    .hero__btns {
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
 .hero__btns > * {
   margin: 0 .5rem; }
+  @media only screen and (max-width: 767px) {
+    .hero__btns > * {
+      margin-bottom: 1rem; } }
 
 .installation {
   background: #34495e;
@@ -530,16 +554,19 @@ strong {
 
 .usage__example {
   display: block;
-  margin: 0 auto 1rem; }
+  margin: 0 auto 1rem;
+  text-align: center;
+  font-size: 1rem; }
 
 .usage__smallprint {
   display: block;
   margin-bottom: 2rem; }
 
 .predefined-breakpoints {
-  background: #e74c3c; }
+  background: #e74c3c;
+  color: white; }
 
-.predefined-breakpoints .u-title {
+.predefined-breakpoints a {
   color: white; }
 
 .predefined-breakpoints__lists {
@@ -548,7 +575,8 @@ strong {
   display: flex;
   -webkit-justify-content: space-around;
       -ms-flex-pack: distribute;
-          justify-content: space-around; }
+          justify-content: space-around;
+  color: #383838; }
   @media only screen and (max-width: 799px) {
     .predefined-breakpoints__lists {
       -webkit-flex-direction: column;
@@ -571,7 +599,8 @@ strong {
   display: block;
   border-radius: 0;
   border-bottom: 0;
-  padding: 1rem; }
+  padding: 1rem;
+  text-align: center; }
 
 .predefined-breakpoints__list-title:before {
   display: block;
@@ -590,3 +619,10 @@ strong {
 
 .examples__item .u-code {
   display: block; }
+
+.advanced {
+  background: #4caf50;
+  color: white; }
+
+.advanced__custom-list {
+  margin-bottom: 3rem; }
