--- a/style/style.scss
+++ b/style/style.scss
@@ -167,7 +167,7 @@ strong {
   margin: 0 auto .5rem;
   font-size: 3rem;
 
-  @include breakpoints(to mobile-medium) {
+  @include breakpoint(to mobile-medium) {
     font-size: 2.5rem;
   }
 }
@@ -186,7 +186,7 @@ strong {
   display: flex;
   justify-content: center;
 
-  @include breakpoints(to tablet-small) {
+  @include breakpoint(to tablet-small) {
     flex-direction: column;
   }
 }
@@ -194,7 +194,7 @@ strong {
 .hero__btns > * {
   margin: 0 .5rem;
 
-  @include breakpoints(to tablet-small) {
+  @include breakpoint(to tablet-small) {
     margin-bottom: 1rem;
   }
 }
@@ -236,7 +236,7 @@ strong {
   justify-content: space-around;
   color: color(text);
 
-  @include breakpoints(to tablet-medium) {
+  @include breakpoint(to tablet-medium) {
     flex-direction: column;
   }
 }
@@ -250,7 +250,7 @@ strong {
   box-shadow: 0 0 4px 1px rgba(0, 0, 0, .2);
   background: rgb(255, 255, 255);
 
-  @include breakpoints(to tablet-medium) {
+  @include breakpoint(to tablet-medium) {
     margin-bottom: 2rem;
   }
 }
