concatanate into one file for easier use

--- a/src/functions/_index.scss
+++ b/src/functions/_index.scss
@@ -1,3 +1,3 @@
-@import 'breakpoints-parse';
-@import 'string-to-number';
-@import 'breakpoints-values';
+@import '_breakpoints-parse.scss';
+@import '_string-to-number.scss';
+@import '_breakpoints-values.scss';
