--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,3 @@
-@import 'variables/index';
-@import 'functions/index';
-@import 'mixins/index';
+@import 'variables/_index.scss';
+@import 'functions/_index.scss';
+@import 'mixins/_index.scss';
