added codepen example

--- a/style/style.css
+++ b/style/style.css
@@ -564,7 +564,8 @@ strong {
 
 .predefined-breakpoints {
   background: #e74c3c;
-  color: white; }
+  color: white;
+  padding-bottom: 3rem; }
 
 .predefined-breakpoints a {
   color: white; }
@@ -626,3 +627,15 @@ strong {
 
 .advanced__custom-list {
   margin-bottom: 3rem; }
+
+.playground__iframe {
+  max-width: 90%;
+  margin: 0 auto;
+  height: 300px; }
+
+.playground__cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
