--- a/src/functions/_index.scss
+++ b/src/functions/_index.scss
@@ -1,3 +1,4 @@
 @import '_breakpoints-parse.scss';
 @import '_string-to-number.scss';
 @import '_breakpoints-values.scss';
+@import '_set-max-breakpoint.scss';
